[Cairo] ImageBuffer::toDataURL(): improve error handling, add mimeType ASSERTs https://bugs.webkit.org/show_bug.cgi?id=83569

Reviewed by Eric Seidel.

No new tests. Covered by exiting fast/canvas/*toDataURL* tests.

* platform/graphics/cairo/ImageBufferCairo.cpp:
(WebCore::writeFunction): Return write success or failure with the appropriate
cairo status code per http://cairographics.org/manual/cairo-PNG-Support.html
(WebCore::ImageBuffer::toDataURL): Add mimeType ASSERT()s. <canvas> ensures that
a valid mimeType (supported by the port) is sent to toDataURL() calls. Check for
encoding failure and return "data:," if so.


Canonical link: https://commits.webkit.org/101480@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114204 268f45cc-cd09-0410-ab3c-d52691b4dbfc